// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`scenarios Reducer addScenario must add a new scenario to the list of scenarios 1`] = `
Object {
  "lastId": 1,
  "scenarios": Array [
    Object {
      "actions": Array [
        Object {
          "id": 45,
          "options": Object {},
        },
        Object {
          "id": 30,
          "options": Object {
            "lat": 35,
            "lng": -45,
          },
        },
      ],
      "active": true,
      "conditions": Array [
        Object {
          "id": 34,
          "options": Object {},
        },
        Object {
          "id": 75,
          "options": Object {
            "auth": "33442243654234_fg",
          },
        },
      ],
      "date": 2000-11-22T00:00:00.000Z,
      "id": 1,
      "name": "Mon scenario fun",
    },
  ],
}
`;

exports[`scenarios Reducer deleteScenario must delete an existing scenario 1`] = `
Array [
  Object {
    "actions": Array [
      Object {
        "id": 45,
        "options": Object {},
      },
      Object {
        "id": 30,
        "options": Object {
          "lat": 35,
          "lng": -45,
        },
      },
    ],
    "active": true,
    "conditions": Array [
      Object {
        "id": 34,
        "options": Object {},
      },
      Object {
        "id": 75,
        "options": Object {
          "auth": "33442243654234_fg",
        },
      },
    ],
    "date": 2000-11-22T00:00:00.000Z,
    "id": 2,
    "name": "Mon scenario fun",
  },
]
`;

exports[`scenarios Reducer deleteScenario must do nothing if no scenario match 1`] = `
Array [
  Object {
    "actions": Array [
      Object {
        "id": 45,
        "options": Object {},
      },
      Object {
        "id": 30,
        "options": Object {
          "lat": 35,
          "lng": -45,
        },
      },
    ],
    "active": true,
    "conditions": Array [
      Object {
        "id": 34,
        "options": Object {},
      },
      Object {
        "id": 75,
        "options": Object {
          "auth": "33442243654234_fg",
        },
      },
    ],
    "date": 2000-11-22T00:00:00.000Z,
    "id": 1,
    "name": "Mon scenario fun",
  },
]
`;

exports[`scenarios Reducer deleteScenario must return the initial state if no scenario was in the state 1`] = `Array []`;

exports[`scenarios Reducer modifyScenario must edit an existing scenario  1`] = `
Object {
  "lastId": 1,
  "scenarios": Array [
    Object {
      "actions": undefined,
      "active": true,
      "conditions": undefined,
      "date": 2000-11-22T00:00:00.000Z,
      "id": 1,
      "name": "edited one",
    },
  ],
}
`;

exports[`scenarios Reducer switchOffScenario must asiable an enable scenario  1`] = `
Object {
  "lastId": 1,
  "scenarios": Array [
    Object {
      "actions": Array [
        Object {
          "id": 45,
          "options": Object {},
        },
        Object {
          "id": 30,
          "options": Object {
            "lat": 35,
            "lng": -45,
          },
        },
      ],
      "active": false,
      "conditions": Array [
        Object {
          "id": 34,
          "options": Object {},
        },
        Object {
          "id": 75,
          "options": Object {
            "auth": "33442243654234_fg",
          },
        },
      ],
      "date": 2000-11-22T00:00:00.000Z,
      "id": 1,
      "name": "Mon scenario fun",
    },
  ],
}
`;

exports[`scenarios Reducer switchOffScenario must disable an already disabled scenario  1`] = `
Object {
  "lastId": 1,
  "scenarios": Array [
    Object {
      "actions": Array [
        Object {
          "id": 45,
          "options": Object {},
        },
        Object {
          "id": 30,
          "options": Object {
            "lat": 35,
            "lng": -45,
          },
        },
      ],
      "active": false,
      "conditions": Array [
        Object {
          "id": 34,
          "options": Object {},
        },
        Object {
          "id": 75,
          "options": Object {
            "auth": "33442243654234_fg",
          },
        },
      ],
      "date": 2000-11-22T00:00:00.000Z,
      "id": 1,
      "name": "Mon scenario fun",
    },
  ],
}
`;

exports[`scenarios Reducer switchOnScenario must activate a disabled scenario  1`] = `
Object {
  "lastId": 1,
  "scenarios": Array [
    Object {
      "actions": Array [
        Object {
          "id": 45,
          "options": Object {},
        },
        Object {
          "id": 30,
          "options": Object {
            "lat": 35,
            "lng": -45,
          },
        },
      ],
      "active": true,
      "conditions": Array [
        Object {
          "id": 34,
          "options": Object {},
        },
        Object {
          "id": 75,
          "options": Object {
            "auth": "33442243654234_fg",
          },
        },
      ],
      "date": 2000-11-22T00:00:00.000Z,
      "id": 1,
      "name": "Mon scenario fun",
    },
  ],
}
`;

exports[`scenarios Reducer switchOnScenario must activate an already activated scenario  1`] = `
Object {
  "lastId": 1,
  "scenarios": Array [
    Object {
      "actions": Array [
        Object {
          "id": 45,
          "options": Object {},
        },
        Object {
          "id": 30,
          "options": Object {
            "lat": 35,
            "lng": -45,
          },
        },
      ],
      "active": true,
      "conditions": Array [
        Object {
          "id": 34,
          "options": Object {},
        },
        Object {
          "id": 75,
          "options": Object {
            "auth": "33442243654234_fg",
          },
        },
      ],
      "date": 2000-11-22T00:00:00.000Z,
      "id": 1,
      "name": "Mon scenario fun",
    },
  ],
}
`;
